[tool.poetry]
name = "idaeho"
version = "0.1.0"
description = ""
authors = ["emmanueluwa <oemmanuel.uwadiae@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.121.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
